# gbp-webhook-tts

./: .gitignore  LICENSE  Makefile  README.md  noxfile.py  pyproject.toml
src/gbp_webhook_tts/: handlers.py  utils.py
tests/: __main__.py  fixtures.py  lib.py  test_handlers.py  test_templates.py  test_utils.py
